Add external script loading. Fix issues with pages not being padded properly.

--- a/app/index.html
+++ b/app/index.html
@@ -154,8 +154,7 @@
                 </a> -->
             </div>
             <div class="pages">
-                <div class="content page hide" page="settings" id="settings"></div>
-                <div class="content page hide" page="overlays" id="overlays"></div>
+                <div class="content page widget-settings-page hide" page="settings" id="settings"></div>
                 <div class="content page hide" page="welcome" id="welcome">
                     <!-- TODO Jake, welcome screen. -->
                 </div>
