Remove updater code, that's handled in the new launcher.

--- a/app/index.html
+++ b/app/index.html
@@ -186,7 +186,7 @@
             });
 
             navigate("settings");
-            CAFFEINATED.update();
+            CAFFEINATED.init();
 
             /*
             const contextMenu = require('electron-context-menu');
