Add translation support, fix some CSS oddities, and release pre1!
Also fixed my CSS formatter :D

--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
 
     <footer>
         <script src="js/util.js"></script>
+        <script src="js/lang.js"></script>
         <script src="js/currencies.js"></script>
         <script src="js/selectnsearch.js"></script>
         <script src="js/forms.js"></script>
