Add the backbone for a welcome screen

--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
                         <!-- <div class="menu-button-title">Overlays</div>
                             </a>
                         </li> -->
-                        <li id='menu-overlays'>
+                        <li id="menu-overlays">
                             <a class="menu-button">
                                 <div class="menu-button-title">
                                     Widgets <ion-icon name="chevron-down-outline" class="sub-menu-arrow"></ion-icon>
@@ -155,8 +155,27 @@
             </div>
             <div class="pages">
                 <div class="content page widget-settings-page hide" page="settings" id="settings"></div>
-                <div class="content page hide" page="welcome" id="welcome">
-                    <!-- TODO Jake, welcome screen. -->
+            </div>
+            <div class="welcome">
+                <!-- Let the welcome wagon commence -->
+                <div class="hide" id="welcome-get-started">
+                    <div class="center-text">
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        Welcome to the new Casterlabs!
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <a class="button">
+                            Let's do it
+                        </a>
+                    </div>
+                </div>
+                <div class="hide" id="welcome-set-username">
+
                 </div>
             </div>
         </div>
