Change how the follower count is displayed.

--- a/app/index.html
+++ b/app/index.html
@@ -156,7 +156,7 @@
             <div class="pages">
                 <div class="content page widget-settings-page hide" page="settings" id="settings"></div>
             </div>
-            <div class="welcome">
+            <div class="hide" class="welcome">
                 <!-- Let the welcome wagon commence -->
                 <div class="hide" id="welcome-get-started">
                     <div class="center-text">
