--- a/app/index.html
+++ b/app/index.html
@@ -13,21 +13,20 @@
         <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
         <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+        <script src="https://casterlabs.github.io/CurrencyConvert.js/currencyconvert.js"></script>
+        <!-- https://tobiasahlin.com/spinkit/ -->
         <style>
-            /* https://tobiasahlin.com/spinkit/ */
             .spinner {
                 margin: 100px auto 0;
                 width: 70px;
                 text-align: center;
-                bottom: 100px;
-                position: fixed;
-                transform: translateX(-50%);
-                left: 50%;
             }
 
-            .spinner div {
+            .spinner>div {
                 width: 18px;
                 height: 18px;
+                background-color: #333;
+
                 border-radius: 100%;
                 display: inline-block;
                 -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
@@ -49,11 +48,11 @@
                 0%,
                 80%,
                 100% {
-                    -webkit-transform: scale(0);
+                    -webkit-transform: scale(0)
                 }
 
                 40% {
-                    -webkit-transform: scale(1);
+                    -webkit-transform: scale(1.0)
                 }
             }
 
@@ -67,8 +66,8 @@
                 }
 
                 40% {
-                    -webkit-transform: scale(1);
-                    transform: scale(1);
+                    -webkit-transform: scale(1.0);
+                    transform: scale(1.0);
                 }
             }
         </style>
@@ -78,11 +77,6 @@
         <div id="splash" style="opacity: 1;">
             <img src="media/app_icon.png" class="app-icon" />
             <img src="media/caffeinated.png" class="caffeinated-logo" />
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
             <span class="splash-message" style="opacity: 0;"></span>
         </div>
         <div class="title-bar">
@@ -156,26 +150,68 @@
             <div class="pages">
                 <div class="content page widget-settings-page hide" page="settings" id="settings"></div>
             </div>
-            <div class="hide" class="welcome">
-                <!-- Let the welcome wagon commence -->
-                <div class="hide" id="welcome-get-started">
-                    <div class="center-text">
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        Welcome to the new Casterlabs!
-                        <br />
-                        <br />
-                        <br />
-                        <br />
-                        <a class="button">
-                            Let's do it
-                        </a>
-                    </div>
+            <div id="login" class="center-text hide">
+                <br />
+                <br />
+                <br />
+                <br />
+                <div id="login-buttons">
+                    <span class="subtitle is-3">
+                        Log in to Casterlabs
+                    </span>
+                    <!-- <sub><i>ITALICS</i> <b>BOLD <i>VARIETY</i></b></sub> New merch? -->
+                    <br />
+                    <br />
+                    <br />
+                    <a class="button" onclick="loginScreen('TWITCH');" style="overflow: hidden; background-color: #7d2bf9;">
+                        <img src="https://assets.casterlabs.co/twitch/logo.png" style="height: 1.5em; position: absolute; left: 12.5px; top: 7.5px;" />
+                        <span style="padding-left: 1.75em; z-index: 2;">Login with Twitch</span>
+                    </a>
+                    <a class="button" onclick="loginScreen('CAFFEINE');" style="overflow: hidden; background-color: #0000FF;">
+                        <img src="https://assets.casterlabs.co/caffeine/logo.png" style="height: 2.5em; position: absolute; left: 5px;" />
+                        <span style="padding-left: 1.75em; z-index: 2;">Login with Caffeine</span>
+                    </a>
                 </div>
-                <div class="hide" id="welcome-set-username">
-
+                <div id="login-waiting" class="hide">
+                    <div class="spinner">
+                        <div class="bounce1"></div>
+                        <div class="bounce2"></div>
+                        <div class="bounce3"></div>
+                    </div>
+                    <br />
+                    <a onclick="loginScreen('NONE');">
+                        <sup>
+                            Want to go back?
+                        </sup>
+                    </a>
+                </div>
+                <div id="login-caffeine" class="hide">
+                    <br />
+                    <br />
+                    <input id="login-caffeine-username" type="input" placeholder="Username" class="input login-element" />
+                    <br />
+                    <input id="login-caffeine-password" type="password" placeholder="Password" class="input login-element" />
+                    <br />
+                    <input type="submit" value="Signin" class="button login-element" onclick="loginCaffeine()" />
+                    <br />
+                    <a onclick="loginScreen('NONE');">
+                        <sup>
+                            Want to go back?
+                        </sup>
+                    </a>
+                </div>
+                <div id="mfa-caffeine" class="hide">
+                    <br />
+                    <br />
+                    <input id="login-caffeine-mfa" type="input" placeholder="2 Factor Code" class="input login-element" />
+                    <br />
+                    <input type="submit" value="Signin" class="button login-element" onclick="loginCaffeine()" />
+                    <br />
+                    <a onclick="loginScreen('NONE');">
+                        <sup>
+                            Want to go back?
+                        </sup>
+                    </a>
                 </div>
             </div>
         </div>
@@ -183,6 +219,7 @@
 
     <footer>
         <script src="js/util.js"></script>
+        <script src="js/kinoko.js"></script>
         <script src="js/lang.js"></script>
         <script src="js/currencies.js"></script>
         <script src="js/selectnsearch.js"></script>
@@ -195,6 +232,7 @@
         <script src="js/repomanager.js"></script>
         <script src="js/caffeinated.js"></script>
         <script>
+
             window.addEventListener("beforeunload", () => {
                 const current = electron.getCurrentWindow();
 
