Fix the chat module and viewers page.

--- a/app/modules/modules/chatviewers.html
+++ b/app/modules/modules/chatviewers.html
@@ -98,9 +98,9 @@
                     let username = document.createElement("span");
                     let pfp = document.createElement("img");
 
-                    username.innerText = viewer.user;
+                    username.innerText = viewer.username;
 
-                    pfp.src = viewer.image;
+                    pfp.src = viewer.image_link;
 
                     div.appendChild(pfp);
                     div.appendChild(username);
