Do some misc things.
Fixed the viewers popout.
Fixed viewers in general.
Added a badges to the username thing.

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,9 @@
             <span class="splash-message" style="opacity: 0;"></span>
         </div>
         <div class="title-bar">
-            <div class="title-bar-title"><img class="version-hover" src="media/app_icon.png" />Caffeinated</div>
+            <div class="title-bar-title">
+                <img class="version-hover" src="media/app_icon.png" />Caffeinated
+            </div>
             <!-- <span class="currentpage" style="opacity: 0;"></span> -->
             <a class="close" title="Close">
                 <ion-icon name="close-outline"></ion-icon>
