--- a/app/modules/modules/chatviewers.html
+++ b/app/modules/modules/chatviewers.html
@@ -11,6 +11,13 @@
                 background-color: #141414;
                 font-weight: 400;
                 font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+                height: 100%;
+            }
+
+            body {
+                margin: 0;
+                height: 100%;
+                overflow: hidden;
             }
 
             * {
@@ -42,34 +49,47 @@
             }
 
             #viewers {
-                padding-top: 30px;
+                position: absolute;
+                top: 30px;
+                padding-top: 5px;
+                bottom: 0;
+                overflow-y: auto;
+                overflow-x: hidden;
+                left: 5px;
+                right: 0;
+                -webkit-app-region: no-drag !important;
             }
 
             .viewer {
                 margin-bottom: 5px;
+                -webkit-app-region: no-drag !important;
             }
 
             #close {
                 cursor: pointer;
                 position: fixed;
                 right: 8px;
-                top: 8px;
-                -webkit-app-region: no-drag;
+                top: 6px;
+                -webkit-app-region: no-drag !important;
             }
 
             #close ion-icon {
-                -webkit-app-region: no-drag;
+                -webkit-app-region: no-drag !important;
             }
 
             .count {
                 position: fixed;
-                right: 8px;
-                top: 40px;
+                right: 15px;
+                top: 37px;
                 text-align: right;
             }
 
+            #viewerCount {
+                -webkit-app-region: no-drag !important;
+            }
+
             .eyeicon {
-                transform: translate(0px, 1.5px);
+                transform: translate(1.5px, 2.75px);
             }
 
             img {
@@ -81,8 +101,54 @@
                 vertical-align: bottom;
             }
 
-            .pfp {
+            .pfp img {
                 transform: translateY(1px);
+                -webkit-app-region: no-drag !important;
+            }
+
+            .username {
+                -webkit-app-region: no-drag !important;
+            }
+
+            .pfp {
+                -webkit-app-region: no-drag !important;
+            }
+
+            /* Scrollbar */
+
+            ::-webkit-scrollbar {
+                width: 10px;
+            }
+
+            ::-webkit-scrollbar-track {
+                background: #444444;
+            }
+
+            ::-webkit-scrollbar-thumb {
+                background: #AAAAAA;
+            }
+
+            ::-webkit-scrollbar-thumb:hover {
+                background: #505050;
+            }
+
+            ::-webkit-slider-runnable-track {
+                width: 300px;
+                height: 2px;
+                border: none;
+                border-radius: 3px;
+            }
+
+            ::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                border: none;
+                height: 12px;
+                width: 12px;
+                border-radius: 500%;
+                background: #141414;
+                border: 2px solid #515151;
+                margin-top: -5px;
+                cursor: pointer;
             }
         </style>
     </head>
@@ -104,37 +170,57 @@
 
     <footer>
         <script>
+            const { remote, shell } = require("electron");
+
             const viewersElement = document.querySelector("#viewers");
             const viewerCountElement = document.querySelector("#viewerCount");
 
             document.querySelector("#close").addEventListener("click", () => {
-                require("electron").remote.getCurrentWindow().close();
+                remote.getCurrentWindow().close();
             });
-
-            function setViewerCount(count) {
-                viewerCountElement.innerText = count;
-            }
 
             function setViewers(viewers) {
                 viewersElement.innerHTML = "";
 
+                viewerCountElement.innerText = viewers.length;
+
+                console.log(viewers)
+
                 viewers.forEach((viewer) => {
-                    let div = document.createElement("div");
-                    let username = document.createElement("span");
-                    let pfp = document.createElement("img");
+                    const div = document.createElement("div");
+                    const username = document.createElement("span");
+                    const pfp = document.createElement("img");
+                    const pfpLink = document.createElement("a");
 
                     username.innerText = viewer.username;
+                    username.classList = "username";
 
                     pfp.src = viewer.image_link;
-                    pfp.classList = "pfp";
 
-                    div.appendChild(pfp);
+                    pfpLink.appendChild(pfp);
+                    pfpLink.classList = "pfp";
+
+                    if (viewer.UUID !== "Anonymous") {
+                        pfpLink.setAttribute("title", "Click to open channel in your web browser");
+                        pfpLink.addEventListener("click", () => openLink(viewer.link));
+
+                        username.setAttribute("title", "Click to open channel in your web browser");
+                        username.addEventListener("click", () => openLink(viewer.link));
+                    }
+
+                    div.appendChild(pfpLink);
                     div.appendChild(username);
                     div.classList = "viewer";
 
                     viewersElement.appendChild(div);
                 });
             }
+
+
+            function openLink(link) {
+                shell.openExternal(link);
+            }
+
         </script>
     </footer>
 
