Begin making everything translatable!

--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,8 @@
                         <li id="menu-overlays">
                             <a class="menu-button">
                                 <div class="menu-button-title">
-                                    Widgets <ion-icon name="chevron-down-outline" class="sub-menu-arrow"></ion-icon>
+                                    <span class="translatable" lang="caffeinated.internal.widgets">Widgets</span>
+                                    <ion-icon name="chevron-down-outline" class="sub-menu-arrow"></ion-icon>
                                 </div>
                             </a>
                             <div class="dropdown-container" id="widgets">
