--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,14 @@
 
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css" />
-        <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css" />
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="css/selectnsearch.css" />
-        <link rel="stylesheet" href="css/quill.css" />
+
+        <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css" class="bulma-style-sheet" />
+        <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css" class="quill-snow-style-sheet" />
+
+        <link rel="stylesheet" href="css/style.css" class="caffeinated-style-sheet" />
+        <link rel="stylesheet" href="css/selectnsearch.css" class="selectnsearch-style-sheet" />
+        <link rel="stylesheet" href="css/quill.css" class="quill-style-sheet" />
+
         <title>Casterlabs Caffeinated</title>
         <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
