--- a/app/modules/modules/chatdisplay.html
+++ b/app/modules/modules/chatdisplay.html
@@ -183,6 +183,7 @@
                 font-size: 20px;
                 margin-left: 10px;
                 margin-top: 3px;
+                display: inline-block;
             }
 
             .tooltipbtn:last-child {
