--- a/app/index.html
+++ b/app/index.html
@@ -88,18 +88,20 @@
             </div>
             <!-- <span class="currentpage" style="opacity: 0;"></span> -->
             <a class="close" title="Close">
-                <ion-icon name="close-outline"></ion-icon>
+                <ion-icon name="close"></ion-icon>
             </a>
             <a class="minmax" title="Maximize">
                 <ion-icon name="albums-outline"></ion-icon>
             </a>
             <a class="minimize" title="Minimize">
-                <ion-icon name="remove-outline"></ion-icon>
+                <ion-icon name="remove"></ion-icon>
             </a>
         </div>
         <div id="content">
+            <div id="banners">
+            </div>
             <div class="menu">
-                <nav class='animated bounceInDown'>
+                <nav>
                     <ul class="menu-list" id="page-menu">
                         <!-- <li id="menu-overlays">
                             <a class="menu-button" onclick="navigate('overlays');" title="Caffeinated Overlays"> -->
@@ -134,24 +136,23 @@
                         </li>
                     </ul>
                 </nav>
-
-            </div>
-            <div id="user-bar">
-                <a onclick="navigate('settings');">
-                    <img class="user-icon" src="media/icon.png" />
-                    <div class="user-username">
+                <div id="user-bar">
+                    <a onclick="navigate('settings');">
+                        <img class="user-icon" src="media/icon.png" />
+                        <div class="user-username">
+                            <ion-icon name="settings-outline"></ion-icon>
+                        </div>
+                    </a>
+                    <a onclick="openLink(CAFFEINATED.userdata.streamer.link)">
+                        <img class="user-platform" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
+                    </a>
+                    <p class="user-followers">
+                        <span id="followers"></span>
+                    </p>
+                    <!-- <a class="user-settings" title="Settings" onclick="navigate('settings');">
                         <ion-icon name="settings-outline"></ion-icon>
-                    </div>
-                </a>
-                <a onclick="openLink(CAFFEINATED.userdata.streamer.link)">
-                    <img class="user-platform" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" />
-                </a>
-                <p class="user-followers">
-                    <span id="followers"></span>
-                </p>
-                <!-- <a class="user-settings" title="Settings" onclick="navigate('settings');">
-                    <ion-icon name="settings-outline"></ion-icon>
-                </a> -->
+                    </a> -->
+                </div>
             </div>
             <div class="pages">
                 <div class="content page widget-settings-page hide" page="settings" id="settings"></div>
