--- a/app/modules/modules/chatviewers.html
+++ b/app/modules/modules/chatviewers.html
@@ -10,7 +10,7 @@
                 color: whitesmoke;
                 background-color: #141414;
                 font-weight: 400;
-                font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+                font-family: "Roboto", sans-serif;
                 height: 100%;
             }
 
@@ -215,7 +215,6 @@
                     viewersElement.appendChild(div);
                 });
             }
-
 
             function openLink(link) {
                 shell.openExternal(link);
